--- a/index.html
+++ b/index.html
@@ -1,1 +1,63 @@
-Hello World!
+<!doctype html>
+<html lang="en">
+<head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
+    <title>Xss Challenge - 2</title>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <style>
+        html, body{
+            background: url(https://wallpaperaccess.com/full/24866.jpg) no-repeat center center fixed;
+            -webkit-background-size: cover;
+            -moz-background-size: cover;
+            -o-background-size: cover;
+            background-size: cover;
+        }
+    </style>
+
+</head>
+<body>
+    <div class="container">
+        <div class="card mt-3">
+            <div class="card-header bg-info">
+                <h1 class="text-light">Contact Form</h1>
+            </div>
+            <div class="card-body">
+                <form method="post" action="" id="form">
+                    <div class="alert alert-success" id="alert" role="alert" style="display:none;">
+                        From Submited Successfull! Please Wait For Our Response.
+                    </div>
+                    <div class="form-group">
+                        <label for="email">Name:</label>
+                        <input type="name" class="form-control" placeholder="Full Name" id="name">
+                    </div>
+                    <div class="form-group">
+                        <label for="pwd">Email:</label>
+                        <input type="email" class="form-control" placeholder="Enter email" id="email">
+                    </div>
+                    <div class="form-group">
+                        <label for="comment">Comment:</label>
+                        <textarea class="form-control" rows="5" id="msg"></textarea>
+                    </div>
+                    <input type="submit" class="btn btn-primary" value="Send" />
+                    <br>
+                    <br>
+                    <a class="mt-2" id="credit" href="#"></a>
+                </form>
+            </div>
+        </div>
+    </div>
+    <script>
+    let action = decodeURI(document.location);
+    document.getElementById("credit").href = action;
+    document.getElementById("credit").innerHTML = "© "+action.replace("http://","").replace("https://","");
+    </script>
+</body>
+</html>
