--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                     <input type="submit" class="btn btn-primary" value="Send" />
                     <br>
                     <br>
-                    <a class="mt-2" id="credit" href="#"></a>
+                    <center><a class="mt-2" id="credit" href="#"></a></center>
                 </form>
             </div>
         </div>
