--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <script>
     let action = decodeURI(document.location);
     document.getElementById("credit").href = action;
-    document.getElementById("credit").innerHTML = "Challenge 1: "+action.replace("http://","").replace("https://","")+"/Xss_1.html";
+    document.getElementById("credit").innerHTML = "Challenge 1: "+action+"/Xss_1.html";
     </script>
 </body>
 </html>
