--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
     </div>
     <script>
     let action = decodeURI(document.location);
-    document.getElementById("credit").href = action+"/Xss_1.html";
-    document.getElementById("credit").innerHTML = "Challenge 1: "+action+"/Xss_1.html";
+    document.getElementById("credit").href = action+"Xss_1.html";
+    document.getElementById("credit").innerHTML = "Challenge 1: "+action+"Xss_1.html";
     </script>
 </body>
 </html>
