--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Salahdin1337 - Backend Developer</title>
     <script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
     <style>
-        * {}
+        * { overflow:scroll;}
         .img-circle {
             border-radius: 50%;
             width: 60%;
