--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Salahdin1337 - Backend Developer</title>
     <script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
     <style>
-        * { overflow:scroll;}
+        * {overflow:scroll}
         .img-circle {
             border-radius: 50%;
             width: 60%;
@@ -180,7 +180,7 @@
                 <span class="input">Subject</span><br />
                 <input type="text" placeholder="My Dear Ripon!" /><br />
                 <span class="input">Message</span><br />
-                <input type="text" placeholder="Details..." /><br />
+                <textarea style="width:100%;height:35vw;padding:5vw;" placeholder="Details..."></textarea>
                 <input type="submit" value="Submit" /><br />
             </form>
         </div>
