--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
                 <span class="input">Subject</span><br />
                 <input type="text" placeholder="My Dear Ripon!" /><br />
                 <span class="input">Message</span><br />
-                <textarea style="width:100%;height:35vw;padding:5vw;" placeholder="Details..."></textarea>
+                <textarea style="width:100%;height:35vw;padding:5vw;font-size:5vw" placeholder="Details..."></textarea>
                 <input type="submit" value="Submit" /><br />
             </form>
         </div>
