--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Salahdin1337 - Backend Developer</title>
+    <title>Mohammad Ripon - Backend Developer</title>
     <script src='font.js' crossorigin='anonymous'></script>
     <style>
         * {overflow:scroll}
         .img-circle {
+            box-shadow: 5px 5px 10px #000000;
             border-radius: 50%;
             width: 60%;
-            border: 2px solid #000000;
             height: auto;
         }
         .img {
@@ -23,6 +23,7 @@
             height: auto;
         }
         .about {
+            box-shadow: 5px 5px 10px #000000;
             background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQhaT-EMMT599fddpJJYmM04oAHzDPpaH6-Mg&usqp=CAU);
             padding: 2vw;
             background-size: 100% 100%;
@@ -100,9 +101,10 @@
             text-shadow: 5px 5px 10px #000000;
         }
         .details {
-            background-color: #21C36F;
+            background-color: #1B1B1B;
             padding: 5vw;
             overflow: scroll;
+            box-shadow: 5px 5px 10px #000000;
         }
         li {
             text-shadow: 5px 5px 10px #000000;
@@ -132,6 +134,7 @@
             padding: 10vw;
             margin-top: 5vw;
             text-shadow: 5px 5px 10px #000000;
+            box-shadow: 5px 5px 10px #ffffff;
         }
         .footer-text {
             color: #ffffff;
