--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
         <hr class="shadow" />
         <br />
         <div class="about">
-            <h1 class="head" style="color:#3C4142"><i class='fas fa-user-graduate'></i> About Us</h1>
+            <h1 class="head" style="color:#3C4142"><i class='fas fa-user-graduate'></i> About Me</h1>
             <p class="description">
                 I am Mohammad Ripon Mollah<br>
                 I am a beginner Web & Security Resarching.<br
