--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
             <li>City: Tangail, Dhaka</li>
             <li>Website: https://riponmollah2004.github.io</li>
             <li>Email: riponmollah461@gmail.com</li>
-            <li>Facebook: https://www.facebook.com/riponmollah2004</li>
+            <li>Facebook: https://fb.com/riponmollah2004</li>
 
         </div>
         <br>
